--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -70,6 +70,16 @@
     outline: none;
 }
 
+.btn {
+    background-color: var(--primary);
+    color: var(--text-color);
+    text-transform: uppercase;
+    width: 100%;
+    padding: 12px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+}
 /* Mobile: Telas menores (até 450px) */
 @media (max-width: 450px) {
     .eventSubscription {
